fixes flexbox issue on IE

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,6 @@
 .App {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+    height: 100vh;
 }
