--- a/src/css/root.css
+++ b/src/css/root.css
@@ -23,6 +23,7 @@
 
     /* spacing */
 
+    --spacing-narrow: 4px;
     --spacing: 8px;
     --spacing-wide: 16px;
     --border-width: 4px;
